build: Added java.sql module to jvmArgs list